# stratosync

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  setup_repo.sh
.cross/: Dockerfile.aarch64
.github/workflows/: ci.yml  release.yml
contrib/desktop/: stratosync-tray.desktop
contrib/file-managers/caja/: README.md  stratosync_caja.py
contrib/file-managers/common/: stratosync_fm_common.py  test_stratosync_fm_common.py
contrib/file-managers/dolphin/: README.md  stratosync.desktop
contrib/file-managers/dolphin/overlay-plugin/: CMakeLists.txt  README.md  stratosync_overlay.cpp  stratosync_overlay.h  stratosync_overlay.json
contrib/file-managers/nautilus/: README.md  stratosync_nautilus.py
contrib/file-managers/nemo/: README.md  stratosync_nemo.py
contrib/file-managers/pcmanfm/: README.md  stratosync-keep-local.desktop  stratosync-keep-remote.desktop  stratosync-merge.desktop  stratosync-pin.desktop  stratosync-unpin.desktop
contrib/file-managers/thunar/: README.md  stratosync-uca.xml
contrib/nautilus/: README.md  stratosync_nautilus.py
contrib/packaging/aur/: PKGBUILD
contrib/packaging/debian/: changelog  control  rules
contrib/packaging/rpm/: stratosync.spec
contrib/systemd/: stratosyncd.service
crates/stratosync-cli/: Cargo.toml
crates/stratosync-cli/src/: completions.rs  config_io.rs  main.rs
crates/stratosync-cli/src/commands/: config.rs  conflicts.rs  daemon.rs  dashboard.rs  ls.rs  mod.rs  pin.rs  status.rs  versions.rs
crates/stratosync-core/: Cargo.toml
crates/stratosync-core/src/: base_store.rs  content.rs  ipc.rs  lib.rs  merge.rs
crates/stratosync-core/src/backend/: delta.rs  mod.rs  rclone_config.rs  webdav.rs
crates/stratosync-core/src/config/: mod.rs
crates/stratosync-core/src/state/: mod.rs
crates/stratosync-core/src/state/migrations/: 0001_initial.sql  0002_delete_tombstones.sql  0003_poll_generation.sql  0004_base_versions.sql  0005_version_history.sql  0006_dedupe_file_index.sql
crates/stratosync-core/src/types/: mod.rs
crates/stratosync-core/tests/: functional.rs  integration.rs
crates/stratosync-daemon/: Cargo.toml
crates/stratosync-daemon/src/: config_io.rs  main.rs  metrics.rs  server.rs  state.rs  webdav.rs
crates/stratosync-daemon/src/cache/: mod.rs  reconcile.rs
crates/stratosync-daemon/src/fuse/: header_cache.rs  mod.rs  write_ops.rs
crates/stratosync-daemon/src/sync/: conflict.rs  mod.rs  notification.rs  poller.rs  upload_queue.rs  versioning.rs
crates/stratosync-daemon/src/watcher/: mod.rs
crates/stratosync-tray/: Cargo.toml
crates/stratosync-tray/src/: main.rs
docs/: RELEASING.md  ROADMAP.md  index.html  installation.md  usage.md
docs/architecture/: 01-overview.md  02-fuse-layer.md  03-sync-engine.md  04-state-db.md  05-backend.md  06-conflict-resolution.md  07-cache.md  08-config.md
docs/assets/: style.css
docs/dev-journal/: 2026-04-10-delta-polling-oauth-and-rate-limits.md  2026-04-10-live-integration-testing-gdrive.md  2026-04-10-upload-queue-drops-subsequent-writes.md  2026-04-30-dolphin-context-menu-mime-sniff-storm.md  2026-04-30-kernel-cache-hid-latent-db-bugs.md  README.md
scripts/: setup-aws-s3.sh
