[package]
name        = "stratosync-daemon"
description = "stratosync FUSE daemon (stratosyncd)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stratosyncd"
path = "src/main.rs"

[dependencies]
stratosync-core       = { path = "../stratosync-core" }
tokio.workspace       = true
fuser.workspace       = true
notify.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
serde.workspace       = true
serde_json.workspace  = true
dashmap.workspace     = true
chrono.workspace      = true
dirs.workspace        = true
libc.workspace        = true
rusqlite.workspace    = true
toml.workspace        = true
toml_edit.workspace   = true
